# Macronix_2022

./: README.md
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/: CMakeLists.txt  Car_Manual.cpp  example.cpp  imu_data.txt  test.txt
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/IMU_connect/x_IMU_Arduino_Example/IMU_connect/: IMU_connect.ino
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/MotorUnion/: MotorUnion.cpp  MotorUnion.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/MotorUnion/Motor/: CMakeLists.txt  MotorMx.cpp
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/MotorUnion/Motor/motor/: motor.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/XIMU/: CMakeLists.txt  XIMU.cpp  XIMU.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/realsense/: CMakeLists.txt  rsdis.cpp  rsdis.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/: CMakeLists.txt  Car_Manual_UI.cpp  imu_data.txt  main.cpp
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/IMU_connect/x_IMU_Arduino_Example/IMU_connect/: IMU_connect.ino
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/MotorUnion/: CMakeLists.txt  MotorUnion.cpp  MotorUnion.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/MotorUnion/Motor/: Motor.cpp  Motor.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/MotorUnion/Motor/motor/: motor.cpp
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/XIMU/: XIMU.cpp  XIMU.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/rsdis/: CMakeLists.txt  rsdis.cpp  rsdis.h
Macronix_2022_Light-Weighted_Articulated_Rover/Motor_Driver/src/rssave/: CMakeLists.txt  rssave.cpp  rssave.h
